# cafe_order_service

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 8f1b04a73ced_add_image_column_to_product.py  e36f5dceb4d5_init.py
docker/app/: Dockerfile
docker/migrations/: Dockerfile
src/api/: lifespan.py  main.py
src/api/auth/: auth_service.py  dependencies.py  model.py
src/api/v1/endpoints/: __init__.py  category.py  product.py  user.py
src/api/v1/schemas/: cart.py  category.py  product.py  user.py
src/app/dtos/: cart.py  file.py  pagination.py  product.py
src/app/exceptions/: base.py  product.py  user.py
src/app/interactors/: common.py
src/app/interactors/cart/: add_item_to_cart.py  delete_item_in_cart.py  get_cart.py  update_cart_item.py
src/app/interactors/category/: create_category.py
src/app/interactors/order/: create.py
src/app/interactors/product/: create_product.py  delete_product.py  get_product.py  get_products.py
src/app/interactors/user/: create_user.py
src/app/services/: cart.py  product.py
src/core/config/: __init__.py  base.py
src/core/dependencies/: container.py  database.py  file_storage.py  interactors.py  reader.py  repositories.py  services.py
src/domain/entities/: cart.py  cart_item.py  category.py  mixins.py  order.py  order_item.py  product.py  user.py
src/domain/exceptions/: base.py  cart.py
src/infrastructure/database/: connection.py
src/infrastructure/file_storage/: base.py  local.py  minio.py
src/utils/: __init__.py
(+23 files in other folders)
