[project]
name = "cafe-order-service"
version = "0.1.0"
description = ""
authors = [
    {name = "KamaZ",email = "kamaz_2564@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "dishka (>=1.7.2,<2.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "alembic (>=1.18.1,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "orjson (>=3.11.7,<4.0.0)",
    "minio (>=7.2.20,<8.0.0)",
    "aiofiles (>=25.1.0,<26.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

